2007-10-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocument.m (-setFileName:, -fileURL:, -setUndoManager:
	-writeToURL:...error:): Small fixes of previous changes.
	Patch by Wolfgang Lux <wolfgang.lux@gmail.com>. 

2007-09-30 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-cascadeTopLeftFromPoint:): Adopt the
	resulting next point to visible screen. Based on patch by 
	Wolfgang Lux <wolfgang.lux@gmail.com>. 
	
2007-09-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-validateEditing): Set object value to
	nil, when formatting the string failed.
	* Source/NSActionCell.m (-intValue): Check flag in_editing before
	validating the editing. 

2007-09-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarItem.m (GSToolbarButtonCell-drawInteriorWithFrame:inView:): 
	Made working for a flipped view.

2007-09-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSplitView.m (-displayRectIgnoringOpacity:inContext:):
	Implement this method instead of the two old display methods.

2007-09-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-drawRect:, -rectForCharacterRange:,
	-firstRectForCharacterRange:): Protect againt layoutmanager being nil.
	* Source/NSTableView.m (-validateEditing): Use setStringValue:
	when converting the string failed.
	* Source/NSTableView.m (-mouseDown:): Don't interrupt editing
	another cell, if the current string isn't valid.
	Patches partly by Andreas Höschler <ahoesch@smartsoft.de>.
	
2007-09-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m (-insertItemWithTitle:atIndex:):
	Select new item when there isn't any selection.

2007-09-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableHeaderView.m,
	* Source/NSSlider.m,
	* Source/NSProgressIndicator.m,
	* Source/NSButton.m (-isFlipped): Add fliiping.
	* Source/NSTableHeaderView.m (-drawRect:): Adjust for flipping. 
	* Source/NSTabView.m: Mark as needing an isFlipped method.

2007-09-09 Fred Kiefer <FredKiefer@gmx.de>
