@@ -1,3 +1,9 @@
+2007-10-02 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSPopUpButtonCell.m (-cellSize): Don't return zero size,
+	when there are no items. Based on patch by Andreas Höschler
+	<ahoesch@smartsoft.de>. 
+
 2007-10-01 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSDocument.m (-setFileName:, -fileURL:, -setUndoManager:
